Updating first page for Telegramska

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <title>Telegram Interface</title>
     <link rel="stylesheet" href="https://use.typekit.net/nll6odj.css">
+    <link rel="stylesheet" href="public/css/normalize.css">
+    <link rel="stylesheet" href="public/css/skeleton.css">
 </head>
 
-<body>
+<body class="background-blue-gradient">
     <div id="app"></div>
     <script>
         var bundlePath = './build/bundle.js';
