--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="public/css/skeleton.css">
 </head>
 
-<body class="background-blue-gradient">
+<body>
     <div id="app"></div>
     <script>
         var bundlePath = './build/bundle.js';
